Possible fix for white triangle not filling container on mobile

--- a/src/style/MyPage.less
+++ b/src/style/MyPage.less
@@ -91,9 +91,6 @@ a.btn.btn-lg.btn-default.btn-gl.discrete-login {
 // card at the head of the page welcoming the user
 .WelcomeCard {	
 
-	// So that text and triangle-container are properly spaced
-	height: 100%;
-
 	.header-text{
 		vertical-align: middle; 
 		text-align: center;
