--- a/src/style/flex.less
+++ b/src/style/flex.less
@@ -29,3 +29,9 @@
 .flex-space-between {
     justify-content: space-between;
 }
+
+// Will take up as much space in the container as possible
+.flex-fill {
+    display: flex;
+    flex: 1;
+}
